# deep_grasp_demo

./: .gitignore  dependencies.repos  dexnet_requirements.txt
deep_grasp_task/: CMakeLists.txt  README.md  package.xml
deep_grasp_task/config/: barclamp.yaml  barclamp_config.yaml  block_config.yaml  cylinder.yaml  cylinder_config.yaml  gpd_config.yaml  gz_gui.config  loco_config.yaml  mtc_salad.rviz  mustard.yaml  ros_gz_bridge.yaml  salad_config.yaml  strawberry.yaml
deep_grasp_task/config/calib/: camera.yaml
deep_grasp_task/include/deep_grasp_task/: deep_pick_place_task.h  salad_task.h  strawberry_task.h
deep_grasp_task/include/deep_grasp_task/stages/: action_base.h  deep_grasp_pose.h
deep_grasp_task/launch/: barclamp_world.py  block_world.launch  block_world.launch.xml  block_world.py  cylinder_world.launch  gazebo_pick_place.launch  gazebo_strawberry.launch  panda_world.launch  salad.launch  salad_world.launch  sensor_block.launch  sensor_data_gazebo.launch  spoon_world.launch
deep_grasp_task/rviz/: mtc.rviz
deep_grasp_task/sdf/: bowl.sdf
deep_grasp_task/src/: cylinder_segment.cpp  deep_grasp_demo.cpp  deep_pick_place_task.cpp  salad_demo.cpp  salad_task.cpp  stack_blocks.cpp  strawberry_demo.cpp  strawberry_task.cpp
deep_grasp_task/src/stages/: deep_grasp_pose.cpp
deep_grasp_task/urdf/: colors.urdf.xacro
deep_grasp_task/urdf/objects/: barclamp.urdf.xacro  block.urdf.xacro  bowl.urdf.xacro  table.urdf.xacro
deep_grasp_task/urdf/robots/: panda_camera.urdf.xacro
deep_grasp_task/worlds/: empty.sdf  world2.sdf
moveit_task_constructor_dexnet/config/: dexnet_config.yaml
moveit_task_constructor_dexnet/launch/: dexnet_demo.launch
moveit_task_constructor_dexnet/scripts/: grasp_detector
moveit_task_constructor_dexnet/src/: gqcnn_server
moveit_task_constructor_gpd/: CMakeLists.txt  package.xml
moveit_task_constructor_gpd/config/: gpd_config.yaml
moveit_task_constructor_gpd/data/pointclouds/: new_barclamp.pcd  strawberry2.pcd
moveit_task_constructor_gpd/data/pointclouds/block_world/: blocks.pcd  spoon.pcd
moveit_task_constructor_gpd/include/moveit_task_constructor_gpd/: grasp_detection.h
moveit_task_constructor_gpd/launch/: cylinder.launch  gpd_demo.launch  stack_blocks.launch
moveit_task_constructor_gpd/src/: grasp_detection.cpp
msgs/: CMakeLists.txt  package.xml
msgs/action/: CylinderSegment.action
