<?xml version="1.0"?>
<package format="3">
  <name>deep_grasp_task</name>
  <version>0.0.1</version>
  <description>Constucts a pick place task using deep learning for grasp synthesis</description>

  <maintainer email="boston@picknik.ai">Boston Cleek</maintainer>
  <author email="boston@picknik.ai">Boston Cleek</author>

  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rclcpp</depend>
  <depend>deep_grasp_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
